--- a/index.html
+++ b/index.html
@@ -1466,7 +1466,7 @@
                                             </li>-->
                                             <li>
                                                 <strong><i class="icon-envelope"></i>&nbsp;&nbsp;</strong>
-                                                <span>a. karabay@ rug.nl(delete the spaces)</span>
+                                                <span>a. karabay@ rug.nl (delete the spaces)</span>
                                             </li>
                                             <!--<li>
                                                 <strong><i class="icon-envelope"></i>&nbsp;&nbsp;</strong>
@@ -1474,7 +1474,7 @@
                                             </li>-->
                                             <li>
                                                 <strong><i class="icon-skype"></i>&nbsp;&nbsp;</strong>
-                                                <span>aytackarabay</span>
+                                                <span>aytac kara bay (delete the spaces)</span>
                                             </li>
                                             <!--<li><li>
                                                 <strong><i class="icon-twitter"></i>&nbsp;&nbsp;</strong>
