--- a/index.html
+++ b/index.html
@@ -155,7 +155,7 @@
                                     <div class="clearfix visible-sm visible-xs"></div>
                                     <div class="col-sm-12 col-md-7">
                                         <h3 class="title">Bio</h3>
-                                        I, <b>Aytac Karabay (1989)</b>, am a PhD candidate at the University of Groningen. I studied psychology (BA) between 2007 to 2011 at the Ankara University. After completing my BA studies at the Ankara University, I worked as an intern-psychologist in Sincan prison, and Gazi Social Service and Children Protection Institution voluntarily. In addition, I worked in Durusu and Belinay special education and rehabilitation centers for a year as a psychologist. After professional experience as a psychologist, I started my masters in the field of experimental psychology at the Brooklyn College-City University of New York in 2013.  I worked in Daniel Kurylo`s animal vision lab as a lab-assistant for a year and completed my masters with the thesis “Perceptual Grouping by Orientation Coherence” in September 2015. I have been pursuing my PhD under the supervision of  <a href="https://www.elkanakyurek.com/">Elkan G. Akyurek</a>,  since 2015. Our research is focused on temporal attention, temporal integration, perceptual grouping, and spatial attention. I use behavioral techniques as well as electrophysiology in my researches.</font></p>
+                                        I, <b>Aytac Karabay (1989)</b>, am a PhD candidate at the University of Groningen. I studied psychology (BA) between 2007 to 2011 at the Ankara University. After completing my BA studies at the Ankara University, I worked as an intern-psychologist in Sincan prison, and Gazi Social Service and Children Protection Institution voluntarily. In addition, I worked in Durusu and Belinay special education and rehabilitation centers for a year as a psychologist. After professional experience as a psychologist, I started my masters in the field of experimental psychology at the Brooklyn College-City University of New York in 2013.  I worked in Daniel Kurylo`s animal vision lab as a lab-assistant for a year and completed my masters with the thesis “Perceptual Grouping by Orientation Coherence” in September 2015. I have been pursuing my PhD under the supervision of  <a href="https://www.elkanakyurek.com/" target="_blank">Elkan G. Akyurek</a>,  since 2015. Our research is focused on temporal attention, temporal integration, perceptual grouping, and spatial attention. I use behavioral techniques as well as electrophysiology in my researches.</font></p>
 										</div>  
 										<div class="col-md-4">
                                         <div class="subtitle text-center">
@@ -290,7 +290,7 @@
                             
                                 <div class="row">
                                     <div class="col-md-8">
-                                        <p> Our research together with Jefta, David and <a href="https://www.elkanakyurek.com">Elkan</a> about how cocoa flavanols enhances visual attention is accepted for publication in Psychopharmacology. We have found that consumption of cocoa with high flavanol content (dark chocolate) boosts your attention!</p>                                        
+                                        <p> Our research together with Jefta, David and <a href="https://www.elkanakyurek.com" target="_blank">Elkan</a> about how cocoa flavanols enhances visual attention is accepted for publication in Psychopharmacology. We have found that consumption of cocoa with high flavanol content (dark chocolate) boosts your attention!</p>                                        
                                     </div>
                                     <!--<div class="col-md-4">
                                         <div class="subtitle text-center">
@@ -1482,7 +1482,7 @@
                                             </li>-->
                                             <li>
                                                 <strong><i class="icon-linkedin-sign"></i>&nbsp;&nbsp;</strong>
-                                                <span><a href="https://www.linkedin.com/in/ayta%C3%A7-karabay-306252a2">aytackarabay</a></span>
+                                                <span><a href="https://www.linkedin.com/in/ayta%C3%A7-karabay-306252a2" target="_blank">aytackarabay</a></span>
                                             </li>
                                         </ul>    
 
