--- a/index.html
+++ b/index.html
@@ -625,7 +625,7 @@
                                                             <a href="#" class="pubcollapse">
                                                                 <i class="icon-expand-alt"></i>
                                                             </a>
-                                                            <a href="https://link.springer.com/article/10.1007/s00213-018-4861-4" class="tooltips" title="External link" target="_blank">
+                                                            <a href="https://link.springer.com/article/10.3758%2Fs13414-017-1333-6" class="tooltips" title="External link" target="_blank">
                                                                 <i class="icon-external-link"></i>
                                                             </a>
                                                             <a href="https://rd.springer.com/content/pdf/10.3758%2Fs13414-017-1333-6.pdf" class="tooltips" title="Download" target="_blank">
