--- a/index.html
+++ b/index.html
@@ -664,7 +664,7 @@
                                                         </h4>
                                                         <div class="pubauthor">Richard Cotton, <i>translated to Turkish by</i> Sunbul, O., Sunbul, S.O., <strong>Karabay, A.</strong></div>
                                                         <div class="pubcite">
-                                                            <span class="label label-primary">Book translation</span> Pegem Yayinlari, in press.
+                                                            <span class="label label-primary">Book translation</span> Pegem Academy Press, Istanbul, Turkey, in press.
                                                         </div>
                                                         
                                                     </div>
