--- a/index.html
+++ b/index.html
@@ -201,7 +201,7 @@
                                                 </div>
                                                 <div class="content">
                                                     <h4>Lab assistant</h4>
-                                                    <p><em>Brooklyn College</em>, Animal vision lab</p>
+                                                    <p>Animal vision lab<em>Brooklyn College</em>, City University of New York</p>
                                                 </div>
                                             </li>
                                         </ul>
@@ -217,7 +217,7 @@
                                                     <span class="year">Expected Graduation 2019</span>
                                                 </div>
                                                 <div class="description">
-                                                    <p class="waht">Ph.D. in Cognitive Neuroscience</p>
+                                                    <p class="waht">Cognitive Neuroscience</p>
                                                     <p class="where">University of Groningen,<i> Groningen, the Netherlands</i></p>
                                                 </div>
                                             </li>
