--- a/index.html
+++ b/index.html
@@ -563,7 +563,7 @@
                                                 <option class="filter" value="all" selected>All types</option>
                                                 <option class="filter" value="jpaper">Jounal Papers</option>
                                                 <option class="filter" value="cpaper">Conference Contributions</option>
-                                                <option class="filter" value="bookchapter">Book Chapters</option>
+                                                <!-- <option class="filter" value="bookchapter">Book Chapters</option>-->
                                                 <option class="filter" value="book">Books</option>
                                                 <!-- <option class="filter" value="report">Reports</option>
                                                 <option class="filter" value="tpaper">Technical Papers</option> -->
