--- a/index.html
+++ b/index.html
@@ -408,7 +408,7 @@
                                                 <div class="row">
                                                     <div class="col-sm-6 col-md-3">
                                                         <div class="image">
-                                                            <img alt="image" src="img/blog/darkchocolate.jpg" class="img-responsive">
+                                                            <img alt="image" src="img/blog/LastCourse.jpg" class="img-responsive">
                                                             <div class="imageoverlay">
                                                                 <i class="icon icon-search"></i>
                                                             </div>
@@ -417,13 +417,13 @@
                                                     </div>
                                                     <div class="col-sm-6 col-md-9">
                                                         <div class="meta">
-                                                            <h3>Cocoa flavanols study accepted for publication in Psychopharmacology</h3>
-                                                            <p>Our research together with Jefta, David and <a href="https://www.elkanakyurek.com" target="_blank">Elkan</a> about how cocoa flavanols enhances visual attention is accepted for publication in Psychopharmacology. We have found that consumption of cocoa with high flavanol content (dark chocolate) boosts your attention!</p>
+                                                            <h3>Last Obligatory Course (3/2018)</h3>
+                                                            <p>On 10th of March 2018, I completed the very last obligatory course that is required for earning a BCN certificate at the end of my PhD. </p>
                                                         </div>
                                                     </div>
                                                 </div>
                                                 <div class="details">
-                                                    <p>After a long time of data collection, and long duration of the publication process, our study is accepted for publication. We found that cocoa flavanols improve attention!! </p>
+                                                    <p>Having an academic career route requires too many obligatory and elective courses to take and I have been taking courses all my life. However, finally, the very last obligatory course I have taken has been completed. I do not mean that I will never take courses, because I love to learn in classroom environments.  From now on, I will enjoy more from courses I take because it is finally freedom of choice!</p>
                                                 </div>
 											</li>
                                             
