--- a/indexTR.html
+++ b/indexTR.html
@@ -283,7 +283,7 @@
                                                             <img alt="image" class="thumbnail img-responsive" src="img/personal/awards100x100.png" >
                                                         </div>
                                                         <div class="col-md-10">
-                                                           Bu burs MEB tarafından sunulmuştur ve yüksek lisans ve doktora giderlerimin tamamını karşılamaktadır. Bu bursu ALES sınavındaki performansımdan dolayı kazandım. 
+                                                           Bu burs MEB tarafından sunulmuştur ve yüksek lisans ve doktora eğitim ve kısmi olarak araştırma giderlerimin tamamını karşılamaktadır. Bu bursu ALES sınavındaki performansımdan dolayı kazandım. 
                                                         </div>
                                                     </div>
                                                 </div>
@@ -404,7 +404,7 @@
                                 <div class="row">
                                     <div class="col-md-12">
                                         <ul class="ul-withdetails">
-                                            <li>
+                                            <!--<li>
                                                 <div class="row">
                                                     <div class="col-sm-6 col-md-3">
                                                         <div class="image">
@@ -425,7 +425,7 @@
                                                 <div class="details">
                                                     <p>Akademik kariyer yapmak birçok zorunlu ve seçmeli dersi almayı gerektirir ve ben kendimi bildim bileli ders alıyorum. Sonunda zorunlu almam gereken son kurs olan BCN retreat’i tamamladım. Hayatım boyunca bir daha ders almayacağımı söylemiyorum. Zira sınıf ortamında ders almayı seviyorum. Ancak şu andan sonra gerçekten seçme özgürlüğüm olduğu için aldığım derslerden daha çok zevk alacağım!</p>
                                                 </div>
-											</li>
+											</li>-->
                                             
                                             
                                         </ul>
