--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
         <link rel="stylesheet" href="css/magnific-popup.css">
         <link rel="stylesheet" href="css/style.css">
         <link id="theme-style" rel="stylesheet" href="css/theme-style.css">
-
+		<link href="https://fonts.googleapis.com/css?family=Open+Sans&amp;subset=latin-ext" rel="stylesheet">
         
         <!--/CSS styles-->
         <!--Javascript files-->
