--- a/indexTR.html
+++ b/indexTR.html
@@ -947,7 +947,7 @@
                             
                                 <div class="row">
                                     <div class="col-md-8">
-                                        <p>Araştırmalarım hakkında sorunuz olursa ya da benimle projelerinizde çalışmak isterseniz lütfen iletişime geçmek için çekinmeyin. </p>                              
+                                        <p> Araştırmalarım ve çalışma konularım hakkında bir sorunuz olduğunda ya da bir projenizde benimle çalışmak isterseniz lütfen iletişime geçiniz.  </p>                              
                                     </div>
                                     <div class="col-md-4">
                                         <ul class="list-unstyled">
