--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
         <meta name="description" content="A theme for faculty profile page" />
         <meta name="keywords" content="faculty profile, theme,css, html, jquery, transition, transform, 3d, css3" />
 
-        <link rel="shortcut icon" href="../favicon.ico">
+        <link rel="shortcut icon" href="favicon.ico">
 
         <!--CSS styles-->
         <link rel="stylesheet" href="css/bootstrap.css">
