--- a/indexTR.html
+++ b/indexTR.html
@@ -11,6 +11,7 @@
         <meta name="keywords" content="faculty profile, theme,css, html, jquery, transition, transform, 3d, css3" />
 
         <link rel="shortcut icon" href="favicon.ico">
+		<link rel="icon" href="favicon.ico">
 
         <!--CSS styles-->
         <link rel="stylesheet" href="css/bootstrap.css">
