--- a/index.html
+++ b/index.html
@@ -418,7 +418,7 @@
 											<div class="row">
                                                     <div class="col-sm-6 col-md-2">
                                                         <div class="image">
-                                                            <img alt="image" src="img/blog/darkchocolate.jpg" class="img-responsive2">
+                                                            <img alt="image" src="img/blog/darkchocolate.jpg" class="img-responsive">
                                                         </div>
                                                     </div>
                                                     <div class="col-sm-6 col-md-9">
