--- a/indexTR.html
+++ b/indexTR.html
@@ -325,7 +325,7 @@
 											<div class="row">
                                                     <div class="col-sm-6 col-md-2">
                                                         <div class="image">
-                                                            <img alt="image" src="img/blog/darkchocolate.jpg"  class="img-responsive">
+                                                            <img alt="image" src="img/blog/darkchocolate.jpg"  class="img-responsive2">
                                                         </div>
                                                     </div>
                                                     <div class="col-sm-6 col-md-9">
