--- a/index.html
+++ b/index.html
@@ -164,7 +164,7 @@
                                             </div> 
                                         </div>
 										</div>
-                                        I, <b>Aytaç Karabay (1989)</b>, am a PhD candidate at the University of Groningen. I studied psychology (BA) between 2007 to 2011 at the Ankara University. After completing my BA studies at the Ankara University, I worked in different positions as psychologist for a year. After professional experience, I started my masters in the field of experimental psychology at the Brooklyn College-City University of New York in 2013.  I worked in Daniel Kurylo`s animal vision lab as a lab-assistant for a year and completed my masters with the thesis “Perceptual Grouping by Orientation Coherence” in September 2015. I have been pursuing my PhD under the supervision of  <a href="https://www.elkanakyurek.com/" target="_blank">Elkan G. Akyurek</a>,  since 2015. Our research is focused on temporal attention, temporal integration, perceptual grouping, and spatial attention, and cocoa flavanols. I use behavioral techniques as well as electrophysiology in my researches.
+                                        I, <b>Aytaç Karabay (1989)</b>, am a PhD candidate at the University of Groningen. I studied psychology (BA) between 2007 to 2011 at the Ankara University. After completing my BA studies at the Ankara University, I worked in different positions as psychologist for a year. Then, I started my masters in the field of experimental psychology at the Brooklyn College-City University of New York in 2013.  I worked in Daniel Kurylo`s animal vision lab as a lab-assistant for a year and completed my masters with the thesis “Perceptual Grouping by Orientation Coherence” in September 2015. I have been pursuing my PhD under the supervision of  <a href="https://www.elkanakyurek.com/" target="_blank">Elkan G. Akyurek</a>,  since 2015. Our research is focused on temporal attention, temporal integration, perceptual grouping, and spatial attention, and cocoa flavanols. I use behavioral techniques as well as electrophysiology in my researches.
 									</div>  
                                 </div>
                             </div>        
@@ -291,7 +291,7 @@
                                                             <img alt="image" class="thumbnail img-responsive" src="img/personal/awards100x100.png" >
                                                         </div>
                                                         <div class="col-md-10">
-                                                           I earned the scholarship which covers tuition and stipend for both masters and PhD programs of I choose in the field of experimental psychology from the Ministry of Education, Turkey. I earned this scholarship after passing a national exam.
+                                                           I earned the scholarship which covers tuition and stipend for both masters and PhD programs in the field of experimental psychology from the Ministry of Education, Turkey. I earned this scholarship after passing a national exam.
                                                         </div>
                                                     </div>
                                                 </div>
@@ -447,7 +447,7 @@
                                                     <div class="col-sm-6 col-md-9">
                                                         <div class="meta">
                                                             <h2>Mindwise-Blogpost (4/2018)</h2>
-                                                            <p>I and <a href="https://www.elkanakyurek.com/" target="_blank">Elkan</a> wrote a blogpost about the the flavanol study that published in Psychopharmacology on the<a href="http://mindwise-groningen.nl/"  target="_blank"> Mindwise </a>.  You can reach the full text via the <a href="http://mindwise-groningen.nl/attention-chocolate-can-give-you-an-edge/" target="_blank"> link</a>. Also, there is a <a href="https://www.reddit.com/r/Nootropics/comments/83i3kt/the_acute_effects_of_cocoa_flavanols_on_temporal/" target="_blank"> reddit post </a> about the study which I encountered; it was really nice to see that people are interested in our work. </p>
+                                                            <p>I and <a href="https://www.elkanakyurek.com/" target="_blank">Elkan</a> wrote a blogpost about the flavanol study that published in Psychopharmacology on the<a href="http://mindwise-groningen.nl/"  target="_blank"> Mindwise </a>.  You can reach the full text via the <a href="http://mindwise-groningen.nl/attention-chocolate-can-give-you-an-edge/" target="_blank"> link</a>. Also, there is a <a href="https://www.reddit.com/r/Nootropics/comments/83i3kt/the_acute_effects_of_cocoa_flavanols_on_temporal/" target="_blank"> reddit post </a> about the study which I encountered; it was really nice to see that people are interested in our work. </p>
                                                         </div>
                                                     </div>
                                             </div>
