--- a/index.html
+++ b/index.html
@@ -424,7 +424,7 @@
                                                     <div class="col-sm-6 col-md-9">
                                                         <div class="meta">
                                                             <h2>Psychonomics Meeting (5/2018)</h2>
-                                                            <p> International Psychonomics Meeting was held in Amsterdam which is close to Groningen, so that I took the chance and attended the conference with my veteran poster (Target color and contrast influences temporal attention...). It was a great experience to be in such a well-organized conference. A couple of nights in the beautiful Amsterdam was relaxing as well. Overall, great experience! </p>
+                                                            <p> International Psychonomics Meeting was held in Amsterdam which is close to Groningen, so that I took the chance and attended the conference with my veteran poster (Target color and contrast influences temporal attention...). It was really nice to attend such a well-organized conference. A couple of nights in the beautiful Amsterdam was relaxing as well. Overall, great experience! </p>
                                                         </div>
                                                     </div>
 													</div>
