--- a/index.html
+++ b/index.html
@@ -291,7 +291,7 @@
                                                             <img alt="image" class="thumbnail img-responsive" src="img/personal/awards100x100.png" >
                                                         </div>
                                                         <div class="col-md-10">
-                                                           I earned the scholarship which covers tuition and stipend for both masters and PhD programs in the field of experimental psychology from the Ministry of Education, Turkey. I earned this scholarship after passing a national exam.
+                                                           Scholarship covering both masters and PhD programs in the field of experimental psychology from the Ministry of Education, Turkey. 
                                                         </div>
                                                     </div>
                                                 </div>
