--- a/indexTR.html
+++ b/indexTR.html
@@ -290,7 +290,7 @@
                                                             <img alt="image" class="thumbnail img-responsive" src="img/personal/awards100x100.png" >
                                                         </div>
                                                         <div class="col-md-10">
-                                                           Bu burs MEB tarafından sunulmuştur ve yüksek lisans ve doktora eğitim ve kısmi olarak araştırma giderlerimin tamamını karşılamaktadır. Bu bursu ALES sınavındaki performansımdan dolayı kazandım. 
+                                                           MEB-YLSY bursu, yurtdışında, deneysel psikoloji alanında, master ve doktora programlarını kapsar. 
                                                         </div>
                                                     </div>
                                                 </div>
