CV-publications updated

--- a/indexTR.html
+++ b/indexTR.html
@@ -426,7 +426,49 @@
 											
 											
 											<!--Articles in the format below-->
-											<div class="item mix jpaper" data-year="2018">
+												<div class="item mix jpaper" data-year="2018">
+                                                    <div class="pubmain">
+                                                        <div class="pubassets">
+                                                            <a href="#" class="pubcollapse">
+                                                                <i class="icon-expand-alt"></i>
+                                                            </a><!--
+                                                            <a href="https://link.springer.com/article/10.1007/s00213-018-4861-4" class="tooltips" title="External link" target="_blank">
+                                                                <i class="icon-external-link"></i>
+                                                            </a>
+                                                            <a href="https://link.springer.com/content/pdf/10.1007%2Fs00213-018-4861-4.pdf" class="tooltips" title="Download" target="_blank">
+                                                                <i class="icon-cloud-download"></i>
+                                                            </a>-->
+															<a href="https://osf.io/rwkx8/" class="tooltips" title="Data" target="_blank">
+                                                                <i class="icon-bar-chart"></i>
+                                                            </a> <!--
+															<a href="Files/Tasks/CocoaFlavanolsAttention.7z" class="tooltips" title="Task" target="_blank">
+                                                                <i class="icon-cogs"></i>
+                                                            </a> -->
+													    </div>
+                                                        <h4 class="pubtitle">Temporal integration and attentional selection of color and contrast target pairs in rapid serial visual presentation</h4>
+                                                        <div class="pubauthor"><strong>Karabay, A.</strong>, &  Akyürek, E.G. </div>
+                                                        <div class="pubcite"><span class="label label-success">Journal Paper</span> Acta Psychologica (2019).</div>
+                                                    </div>
+                                                    <div class="pubdetails">
+                                                        <h4>Abstract</h4>
+                                                        <p>Performance in a dual target rapid serial visual presentation task was investigated, dependent on whether the
+color or the contrast of the targets was the same or different. Both identification accuracy on the second target,
+as a measure of temporal attention, and the frequency of temporal integration were measured. When targets had
+a different color (red or blue), overall identification accuracy of the second target and identification accuracy of
+the second target at Lag 1 were both higher than when targets had the same color. At the same time, increased
+temporal integration of the targets at Lag 1 was observed in the different color condition, even though actual
+(non-integrated) single targets never consisted of multiple colors. When the color pairs were made more similar,
+so that they all fell within the range of a single nominal hue (blue), these effects were not observed. Different
+findings were obtained when contrast was manipulated. Identification accuracy of the second target was higher
+in the same contrast condition than in the different contrast condition. Higher identification accuracy of both
+targets was furthermore observed when they were presented with high contrast, while target contrast did not
+influence temporal integration at all. Temporal attention and integration were thus influenced differently by target
+contrast pairing than by (categorical) color pairing. Categorically different color pairs, or more generally,
+categorical feature pairs, may thus afford a reduction in temporal competition between successive targets that
+eventually enhances attention and integration.</p>
+                                                    </div>
+                                                </div>
+												<div class="item mix jpaper" data-year="2018">
                                                     <div class="pubmain">
                                                         <div class="pubassets">
                                                             <a href="#" class="pubcollapse">
