--- a/indexTR.html
+++ b/indexTR.html
@@ -489,7 +489,7 @@ eventually enhances attention and integration.</p>
 													    </div>
                                                         <h4 class="pubtitle">The acute effects of cocoa flavanols on temporal and spatial attention</h4>
                                                         <div class="pubauthor"><strong>Karabay, A.</strong>, Saija J., David F. &  Akyürek, E.G. </div>
-                                                        <div class="pubcite"><span class="label label-success">Journal Paper</span> Psychopharmacology (2018).</div>
+                                                        <div class="pubcite"><span class="label label-success">Journal Paper</span> Psychopharmacology, Volume 235, Issue 5, pp 1497–1511 (2018)</div>
                                                     </div>
                                                     <div class="pubdetails">
                                                         <h4>Abstract</h4>
