--- a/index.html
+++ b/index.html
@@ -553,13 +553,13 @@
                                                         <div class="pubassets">
                                                             <a href="#" class="pubcollapse">
                                                                 <i class="icon-expand-alt"></i>
-                                                            </a><!--
-                                                            <a href="https://link.springer.com/article/10.1007/s00213-018-4861-4" class="tooltips" title="External link" target="_blank">
+                                                            </a>
+                                                            <a href="https://www.sciencedirect.com/science/article/pii/S0001691818305043" class="tooltips" title="External link" target="_blank">
                                                                 <i class="icon-external-link"></i>
                                                             </a>
-                                                            <a href="https://link.springer.com/content/pdf/10.1007%2Fs00213-018-4861-4.pdf" class="tooltips" title="Download" target="_blank">
+                                                            <a href="https://psyarxiv.com/ehzuj/" class="tooltips" title="External link" target="_blank">
                                                                 <i class="icon-cloud-download"></i>
-                                                            </a>-->
+                                                            </a>
 															<a href="https://osf.io/rwkx8/" class="tooltips" title="Data" target="_blank">
                                                                 <i class="icon-bar-chart"></i>
                                                             </a> <!--
