--- a/indexTR.html
+++ b/indexTR.html
@@ -431,19 +431,16 @@
                                                         <div class="pubassets">
                                                             <a href="#" class="pubcollapse">
                                                                 <i class="icon-expand-alt"></i>
-                                                            </a><!--
-                                                            <a href="https://link.springer.com/article/10.1007/s00213-018-4861-4" class="tooltips" title="External link" target="_blank">
+                                                            </a>
+                                                            <a href="https://www.sciencedirect.com/science/article/pii/S0001691818305043" class="tooltips" title="External link" target="_blank">
                                                                 <i class="icon-external-link"></i>
                                                             </a>
-                                                            <a href="https://link.springer.com/content/pdf/10.1007%2Fs00213-018-4861-4.pdf" class="tooltips" title="Download" target="_blank">
+                                                            <a href="https://psyarxiv.com/ehzuj/download" class="tooltips" title="Download" target="_blank">
                                                                 <i class="icon-cloud-download"></i>
-                                                            </a>-->
+                                                            </a>
 															<a href="https://osf.io/rwkx8/" class="tooltips" title="Data" target="_blank">
                                                                 <i class="icon-bar-chart"></i>
-                                                            </a> <!--
-															<a href="Files/Tasks/CocoaFlavanolsAttention.7z" class="tooltips" title="Task" target="_blank">
-                                                                <i class="icon-cogs"></i>
-                                                            </a> -->
+                                                            </a> 
 													    </div>
                                                         <h4 class="pubtitle">Temporal integration and attentional selection of color and contrast target pairs in rapid serial visual presentation</h4>
                                                         <div class="pubauthor"><strong>Karabay, A.</strong>, &  Akyürek, E.G. </div>
