--- a/index.html
+++ b/index.html
@@ -557,19 +557,16 @@
                                                             <a href="https://www.sciencedirect.com/science/article/pii/S0001691818305043" class="tooltips" title="External link" target="_blank">
                                                                 <i class="icon-external-link"></i>
                                                             </a>
-                                                            <a href="https://psyarxiv.com/ehzuj/" class="tooltips" title="External link" target="_blank">
+                                                            <a href="https://psyarxiv.com/ehzuj/download" class="tooltips" title="Download" target="_blank">
                                                                 <i class="icon-cloud-download"></i>
                                                             </a>
 															<a href="https://osf.io/rwkx8/" class="tooltips" title="Data" target="_blank">
                                                                 <i class="icon-bar-chart"></i>
-                                                            </a> <!--
-															<a href="Files/Tasks/CocoaFlavanolsAttention.7z" class="tooltips" title="Task" target="_blank">
-                                                                <i class="icon-cogs"></i>
-                                                            </a> -->
+                                                            </a> 
 													    </div>
                                                         <h4 class="pubtitle">Temporal integration and attentional selection of color and contrast target pairs in rapid serial visual presentation</h4>
                                                         <div class="pubauthor"><strong>Karabay, A.</strong>, &  Akyürek, E.G. </div>
-                                                        <div class="pubcite"><span class="label label-success">Journal Paper</span> Acta Psychologica (2019).</div>
+                                                        <div class="pubcite"><span class="label label-success">Journal Paper</span> Acta Psychologica, Volume 196, pp 56-69(2019)</div>
                                                     </div>
                                                     <div class="pubdetails">
                                                         <h4>Abstract</h4>
