--- a/indexTR.html
+++ b/indexTR.html
@@ -444,7 +444,7 @@
 													    </div>
                                                         <h4 class="pubtitle">Temporal integration and attentional selection of color and contrast target pairs in rapid serial visual presentation</h4>
                                                         <div class="pubauthor"><strong>Karabay, A.</strong>, &  Akyürek, E.G. </div>
-                                                        <div class="pubcite"><span class="label label-success">Journal Paper</span> Acta Psychologica (2019).</div>
+                                                        <div class="pubcite"><span class="label label-success">Journal Paper</span> Acta Psychologica, Volume 196, pp 56-69(2019)</div>
                                                     </div>
                                                     <div class="pubdetails">
                                                         <h4>Abstract</h4>
