--- a/index.html
+++ b/index.html
@@ -557,7 +557,7 @@
                                                             <a href="https://www.sciencedirect.com/science/article/pii/S0001691818305043" class="tooltips" title="External link" target="_blank">
                                                                 <i class="icon-external-link"></i>
                                                             </a>
-                                                            <a href="https://psyarxiv.com/ehzuj/download" class="tooltips" title="Download" target="_blank">
+                                                            <a href="/Files/articles/TemporalIntegrationAttentionalSelection.pdf" class="tooltips" title="Download" target="_blank">
                                                                 <i class="icon-cloud-download"></i>
                                                             </a>
 															<a href="https://osf.io/rwkx8/" class="tooltips" title="Data" target="_blank">
