--- a/index.html
+++ b/index.html
@@ -183,7 +183,9 @@
                                         <ul class="ul-boxed list-unstyled" data-columns="2">
                                             <li>Visual Attention</li>
                                             <li>Visual Perception</li>
-                                            <li>Temporal Integration</li>
+                                            <li>Visual Working Memory</li>
+											<li>Temporal Integration</li>
+
                                         </ul>
 									</div>
 									<div class="col-md-5 col-md-offset-1">
