--- a/indexTR.html
+++ b/indexTR.html
@@ -182,6 +182,7 @@
                                         <ul class="ul-boxed list-unstyled" data-columns="2">
                                             <li>Görsel Dikkat</li>
                                             <li>Görsel Algı</li>
+                                            <li>Görsel Çalışma Belleği</li>											
                                             <li>Zamansal Birleştirme</li>
                                         </ul>
 									</div>
