--- a/index.html
+++ b/index.html
@@ -684,7 +684,7 @@ eventually enhances attention and integration.</p>
                                                     </div>-->
 														<h4 class="pubtitle">Decoding Visual Working Memory Before and After Mental Operations </h4>
                                                         <div class="pubauthor">Kandemir, G. <strong>Karabay, A.</strong>,  Akyürek, E.G. </div>
-                                                        <div class="pubcite"><span class="label label-warning">Poster</span>BCN Winter Meeting at the University of Twente in Twente, Netherlands(2019)</div>
+                                                        <div class="pubcite"><span class="label label-warning">Poster</span>BCN Winter Meeting at the University of Twente in Twente, Netherlands.(2019)</div>
 													</div>
 												</div>	
 												
