--- a/index.html
+++ b/index.html
@@ -684,7 +684,7 @@ eventually enhances attention and integration.</p>
                                                     </div>-->
 														<h4 class="pubtitle">Decoding Visual Working Memory Before and After Mental Operations </h4>
                                                         <div class="pubauthor">Kandemir, G. <strong>Karabay, A.</strong>,  Akyürek, E.G. </div>
-                                                        <div class="pubcite"><span class="label label-warning">Poster</span>BCN Winter Meeting at the University of Twente in Twente, Netherlands.(2019)</div>
+                                                        <div class="pubcite"><span class="label label-warning">Poster</span>BCN Winter Meeting at the University of Twente in Twente, Netherlands. (2019)</div>
 													</div>
 												</div>	
 												
@@ -706,7 +706,7 @@ eventually enhances attention and integration.</p>
                                                     </div>
 														<h4 class="pubtitle">Target Color and Contrast Influences Temporal Attention in Rapid Serial Visual Presentations </h4>
                                                         <div class="pubauthor"><strong>Karabay, A.</strong>,  Akyürek, E.G. </div>
-                                                        <div class="pubcite"><span class="label label-warning">Poster</span>20th Conference of the European Society for Cognitive Psychology (ESCoP) in Potsdam, Germany. & 40th European Conference on Visual Perception (ECVP) in Berlin, Germany. (2017) & Psychonomics International Meeting in Amsterdam (2018) </div>
+                                                        <div class="pubcite"><span class="label label-warning">Poster</span>20th Conference of the European Society for Cognitive Psychology (ESCoP) in Potsdam, Germany. & 40th European Conference on Visual Perception (ECVP) in Berlin, Germany. (2017) & Psychonomics International Meeting in Amsterdam. (2018) </div>
 													</div>
 													<div class="pubdetails">
                                                         <h4>Abstract</h4>
