--- a/indexTR.html
+++ b/indexTR.html
@@ -588,7 +588,7 @@ eventually enhances attention and integration.</p>
                                                     </div>
 														<h4 class="pubtitle">Target Color and Contrast Influences Temporal Attention in Rapid Serial Visual Presentations </h4>
                                                         <div class="pubauthor"><strong>Karabay, A.</strong>,  Akyürek, E.G. </div>
-                                                        <div class="pubcite"><span class="label label-warning">Poster</span>20th Conference of the European Society for Cognitive Psychology (ESCoP) in Potsdam, Germany. & 40th European Conference on Visual Perception (ECVP) in Berlin, Germany. (2017) & Psychonomics International Meeting in Amsterdam (2018) </div>
+                                                        <div class="pubcite"><span class="label label-warning">Poster</span>20th Conference of the European Society for Cognitive Psychology (ESCoP) in Potsdam, Germany. & 40th European Conference on Visual Perception (ECVP) in Berlin, Germany. (2017) & Psychonomics International Meeting in Amsterdam. (2018) </div>
 													</div>
 													<div class="pubdetails">
                                                         <h4>Abstract</h4>
